# futhark-ad

./: Differentiate.hs  Differentiate2.hs  Main.hs  README.md  Reverse.hs  cabal.project  futhark-ad.cabal  notes.md  shell.nix  test.fut  test10.fut  test11.fut  test12.fut  test13.fut  test2.fut  test3.fut  test4.fut  test5.fut  test6.fut  test7.fut  test8.fut  test9.fut
docs/: Makefile  futhark.tex  rules.tex
