cabal-version:       >=1.10

name:                futhark-ad
version:             0.1.0.0
license-file:        LICENSE
author:              Troels Henriksen
maintainer:          athas@sigkill.dk
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable futhark-ad
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, mtl, futhark
  default-language:    Haskell2010
